--- a/public/signup/index.html
+++ b/public/signup/index.html
@@ -13,7 +13,7 @@
 	<nav>
 		<div className="nav-bar-wrapper">
 			<div className="nav-site-title">
-				<p>ArtSEEN NYC</p>
+				<p><a href="https://artseennyc.netlify.com">ArtSEEN NYC</a></p>
 			</div>
 		</div>
 	</nav>
